--- a/src/App.css
+++ b/src/App.css
@@ -60,17 +60,13 @@
   width: 100%;
 }
 
-#container {
+#imageContainer {
   height: 310px;
 }
 
 .image {
-  /* height: 100%;
-  width: 100%;
-  background-size: contain; */
   padding: 1em;
   object-fit: cover;
-
   width: 300px;
   height: 330px;
 }
